# SUEWS

./: .fprettify.rc  .fprettify.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  CHANGELOG.md  CHANGES_SUMMARY.md  CITATION.cff  CLAUDE.md  CODING_GUIDELINES.md  FINAL_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  ISSUE_400_COMMENT_DRAFT.md  MESON_BUILD_FIX.md  Makefile  NOTE_FOR_SILVIA_VALIDATION_UPDATE.md  README.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  azure-pipelines.yml  betterbib_cache.sqlite  cherry_pick_order.txt  demo_inline_fixes.py  env.yml  get_ver_git.py  hide-internal-options-issue.md  hide-internal-options-plan.md  meson.build  meson_options.txt  problems.txt  pyproject.toml  quick-test.ipynb  requirements.in  requirements.txt  run_validator_tests.py  sample_config_modified.yml  sample_config_modified_annotated.yml  simple_physics_test.py  simple_test_corrected.py  (+13 more)
.claude/: README.md  settings.json
.claude-plans/: README.md  feature-adjust-default-values.md  feature-suews-mcp-prototype.md
.githooks/: README.md  pre-commit
.github/: LABELS.md
BuildClasses/: TE_LDN.nml
Release/: Makefile  pack_release.py
SUEWS-SourceCode/: Makefile  Makefile.gfortran  Makefile.ifort  include.common  suews_ctrl_calculations.f95  suews_ctrl_const.f95  suews_ctrl_driver.f95  suews_ctrl_error.f95  suews_ctrl_init.f95  suews_ctrl_input.f95  suews_ctrl_output.f95  suews_ctrl_translate.f95  suews_phys_anemsn.f95  suews_phys_anohm.f95  suews_phys_atmmoiststab.f95  suews_phys_beers.f95  suews_phys_biogenco2.f95  suews_phys_bluews.f95  suews_phys_dailystate.f95  suews_phys_estm.f95  suews_phys_evap.f95  suews_phys_lumps.f95  suews_phys_narp.f95  suews_phys_ohm.f95  suews_phys_resist.f95  suews_phys_rslprof.f95  suews_phys_snow.f95  suews_phys_solweig.f95  suews_phys_waterdist.f95  suews_program.f95  suews_util_datetime.f95  suews_util_meteo.f95  suews_util_minpack.f95  suews_util_stringmod.f95  suews_util_time.f95
Test/: Makefile  test_supy.py
claude-dev/: .dockerignore  CLAUDE_INTEGRATION.md  Dockerfile.claude-dev  GIT_AUTH.md  Makefile  README.md  claude-sandbox.config.json  claude.sh  setup-claude-dev.sh  test-docker-workflow.md
dev/: README.md  gen-var_info_yml.py  var_info.yml
dev-ref/: CODING_GUIDELINES.md  REVIEW_PROCESS.md  issue-triage.md
docs/: .gitignore  (+9 more)
src/supy/: .f2py_f2cmap  .gitignore  .readthedocs.yml  Makefile  README.md  __init__.py  _check.py  _env.py  _load.py  _misc.py  _post.py  _run.py  _save.py  _supy_driver_wrapper.py  _supy_module.py  _version.py  _version_scm.py  build-win-def.py  checker_rules_indiv.json  code2file.json  df_forcing.pkl  df_state_init.pkl  gen_sample_output.py  meson.build  pyproject-local-test.toml  pyproject.toml  setup.py  suews_sim.py  supy_info.json  test-debug.ipynb  validation.py  var2siteselect.json
src/supy-driver/: Makefile  pyproject-localtest.toml  pyproject.toml  setup.py
src/supy-driver/supy_driver/: version.py
src/supy/cmd/: SUEWS.py  table_converter.py  to_yaml.py
src/supy/data_model/: README.md  __init__.py  base.py  core.py  df_state_columns.txt  human_activity.py  hydro.py  model.py  ohm.py  physics.py  precheck.py  profile.py  profiles.py  site.py  state.py  states.py  surface.py  type.py  validation_controller.py  validation_feedback.py  validation_utils.py  yaml_annotator.py  yaml_annotator_json.py
src/supy/data_model/surface/: __init__.py  base.py  urban.py  vegetation.py  water.py
src/supy/data_test/multi-grid/: ERA5_UTC-51.125N-0.25W-171.6A_2013_data_60.txt  ERA5_UTC-51.125N-0.375W-170.0A_2013_data_60.txt  ERA5_UTC-51.25N-0.375W-176.3A_2013_data_60.txt  ERA5_UTC-51.375N-0.375W-172.7A_2013_data_60.txt  ERA5_UTC-51.375N-0.5W-174.4A_2013_data_60.txt  ERA5_UTC-51.5N-0.25E-145.4A_2013_data_60.txt  ERA5_UTC-51.5N-0.5W-174.0A_2013_data_60.txt  ERA5_UTC-51.625N-0.125W-171.3A_2013_data_60.txt  ERA5_UTC-51.875N-0.125E-167.8A_2013_data_60.txt  ERA5_UTC-51.875N-0.25W-184.2A_2013_data_60.txt  ERA5_UTC-51.875N-0.375W-189.0A_2013_data_60.txt  ERA5_UTC-51.875N-0.5W-191.1A_2013_data_60.txt
src/supy/sample_run/: RunControl.nml  benchmark1a_Kc.yml  defaultConfig.yml  sample_config.yml
src/supy/sample_run/Input/: RunControl_STEBBS.nml  SUEWS_SiteSelect.txt  test_stebbs_building_typologies.nml
src/supy/supy/: _check.py  _load.py  _post.py  _run.py  _save.py  _supy_module.py  _version.py  checker_rules_indiv.json  var2siteselect.json
src/supy/supy/cmd/: SUEWS.py
src/supy/supy/sample_run/: RunControl.nml
src/supy/supy/supy_driver/: __init__.py
src/supy/supy/test/: test_SuPy.py
src/supy/supy/test/data_test/: .gitignore
src/supy/supy/test/data_test/multi-grid/: ERA5_UTC-51.25N-0.125E-188.3A_2013_data_60.txt  ERA5_UTC-51.25N-0.125W-183.5A_2013_data_60.txt  ERA5_UTC-51.25N-0.25W-177.9A_2013_data_60.txt  ERA5_UTC-51.5N-0.0E-156.1A_2013_data_60.txt  ERA5_UTC-51.5N-0.125W-163.4A_2013_data_60.txt  ERA5_UTC-51.5N-0.375W-172.3A_2013_data_60.txt  ERA5_UTC-51.625N-0.0E-164.0A_2013_data_60.txt  ERA5_UTC-51.625N-0.25E-153.3A_2013_data_60.txt  ERA5_UTC-51.75N-0.0E-172.0A_2013_data_60.txt  ERA5_UTC-51.75N-0.125E-166.6A_2013_data_60.txt  ERA5_UTC-51.75N-0.125W-179.2A_2013_data_60.txt  ERA5_UTC-51.75N-0.25E-161.2A_2013_data_60.txt  ERA5_UTC-51.75N-0.375W-191.2A_2013_data_60.txt  ERA5_UTC-51.75N-0.5W-196.0A_2013_data_60.txt  ERA5_UTC-51.875N-0.0E-170.7A_2013_data_60.txt  ERA5_UTC-51.875N-0.25E-162.5A_2013_data_60.txt
src/supy/supy/util/: _converter.py  _spinup.py  rules.csv
src/supy/test/data_test/multi-grid/: ERA5_UTC-51.375N-0.25W-174.3A_2013_data_60.txt
src/supy/util/: _UMEP2epw.py  __init__.py  _atm.py  _config.py  _converter.py  _debug.py  _era5.py  _gap_filler.py  _gs.py  _io.py  _missing.py  _ohm.py  _plot.py  _roughness.py  _spinup.py  _state_io.py  _tmy.py  _wrf.py  rules.csv
src/supy_driver/: .gitignore  f2py-f90wrap-patched.py  gen-setup_cfg.py  makefile  meson.build  move_output_gen.py  patch_supy_driver.py  run_f2py.py  run_f90wrap.py
supy-driver/: Makefile  build-win-def.py  pyproject.toml  requirements.txt  setup.py
supy-driver/supy_driver/: version.py
(+904 files in other folders)
