[build-system]
requires = ["wheel", "setuptools", "oldest-supported-numpy"]


[tool.cibuildwheel]
# skip 32-bit and pypy builds
skip = ["*-win32", "*-manylinux_i686","pp*"]

before-build = [
    "make suews",
    'git describe --tags --always --dirty',
]

# Increase pip debugging output
build-verbosity = 1

# Install system library
[tool.cibuildwheel.linux]
before-all = "yum install -y glibc-static"

[tool.cibuildwheel.macos]
before-all = 'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran'
archs = ["x86_64", "universal2", "arm64"]