[build-system]
requires = ["wheel", "setuptools", "oldest-supported-numpy"]


[tool.cibuildwheel]
# skip 32-bit and pypy builds
skip = ["*-win32", "*-manylinux_i686","pp*"]

before-build = [
    'git describe --tags --always --dirty',
]

# Increase pip debugging output
build-verbosity = 1


[tool.cibuildwheel.linux]
# Install system library
before-all = [
    "yum install -y glibc-static",
    "make suews",
]
archs = ["auto64"]

[tool.cibuildwheel.macos]
before-all = [
    'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran',
    "make suews",
]
archs = ["x86_64", "arm64"]


[tool.cibuildwheel.windows]
before-all = [
    "make suews",
]
archs = ["auto64"]