py.install_sources(
    [
        '__init__.py',
        '_check.py',
        '_env.py',
        '_load.py',
        '_misc.py',
        '_post.py',
        '_run.py',
        '_save.py',
        '_supy_driver_wrapper.py',
        '_supy_module.py',
        '_version.py',
        '_version_scm.py',
        'checker_rules_indiv.json',
        'checker_rules_joint.json',
        'var2siteselect.json',
        [
            'cmd/__init__.py',
            'cmd/SUEWS.py',
            'cmd/table_converter.py',
        ],
        [
            'util/_UMEP2epw.py',
            'util/__init__.py',
            'util/_atm.py',
            'util/_converter.py',
            'util/_debug.py',
            'util/_era5.py',
            'util/_gap_filler.py',
            'util/_gs.py',
            'util/_io.py',
            'util/_ohm.py',
            'util/_plot.py',
            'util/_roughness.py',
            'util/_spinup.py',
            'util/_tmy.py',
            'util/_wrf.py',
            'util/rules.csv',
        ],
    ],
subdir:'supy',
preserve_path: true,
)
