py.install_sources(
    [
        '__init__.py',
        '_check.py',
        '_env.py',
        '_load.py',
        '_misc.py',
        '_post.py',
        '_run.py',
        '_save.py',
        '_supy_driver_wrapper.py',
        '_supy_module.py',
        '_version.py',
        '_version_scm.py',
        'code2file.json',
        'checker_rules_indiv.json',
        'checker_rules_joint.json',
        'var2siteselect.json',
        [
            'cmd/__init__.py',
            'cmd/SUEWS.py',
            'cmd/table_converter.py',
        ],
        [
            'util/_UMEP2epw.py',
            'util/__init__.py',
            'util/_atm.py',
            'util/_config.py',
            'util/_converter.py',
            'util/_debug.py',
            'util/_era5.py',
            'util/_gap_filler.py',
            'util/_gs.py',
            'util/_io.py',
            'util/_ohm.py',
            'util/_plot.py',
            'util/_roughness.py',
            'util/_spinup.py',
            'util/_tmy.py',
            'util/_wrf.py',
            'util/rules.csv',
        ],
        [
            'sample_run/sample_config.yml',
            'sample_run/RunControl.nml',
            'sample_run/Input/ESTMinput.nml',
            'sample_run/Input/GridLayoutKc.nml',
            'sample_run/Input/InitialConditionsKc_2011.nml',
            'sample_run/Input/Kc_2012_data_60.txt',
            'sample_run/Input/SUEWS_AnthropogenicEmission.txt',
            'sample_run/Input/SUEWS_BiogenCO2.txt',
            'sample_run/Input/SUEWS_Conductance.txt',
            'sample_run/Input/SUEWS_ESTMCoefficients.txt',
            'sample_run/Input/SUEWS_Irrigation.txt',
            'sample_run/Input/SUEWS_NonVeg.txt',
            'sample_run/Input/SUEWS_OHMCoefficients.txt',
            'sample_run/Input/SUEWS_Profiles.txt',
            'sample_run/Input/SUEWS_SPARTACUS.nml',
            'sample_run/Input/SUEWS_SiteSelect.txt',
            'sample_run/Input/SUEWS_Snow.txt',
            'sample_run/Input/SUEWS_Soil.txt',
            'sample_run/Input/SUEWS_Veg.txt',
            'sample_run/Input/SUEWS_Water.txt',
            'sample_run/Input/SUEWS_WithinGridWaterDist.txt',
            'sample_run/Input/test_stebbs_building_typologies.nml',
            'sample_run/Input/test_stebbs_general_params.nml'
        ],
    ],
    subdir: 'supy',
    preserve_path: true,
)