[build-system]
requires = [
    "wheel",
    "f90wrap",
    "setuptools<60",
    "oldest-supported-numpy",
    "setuptools-git-versioning",
    "setuptools_scm[toml]>=6.2",
]
# the recommended "build_meta" does not work with nonstop f2py and hence is commented out
build-backend = "setuptools.build_meta"

[project]
name = "supy"
dynamic = ["version"]
requires-python = ">3.8"

# [tool.setuptools.packages]
# find = {"where"= "src"}
# [tool.setuptools-git-versioning]
# enabled = true
# template = "{tag}"
# dev_template = "{tag}.post{ccount}"
# # ignore "dirty" flag when building using CI for windows: seems to be a bug in the versioning tool
# dirty_template = "{tag}"
# version_callback = "setup:get_version"

# [tool.setuptools.packages.find]
# where = ["src"]

# [tool.setuptools.package-data]
# mypkg = ["*.txt", "*.json"]

# [tool.distutils.bdist_wheel]
# universal = true

[tool.setuptools_scm]
write_to = "src/supy/supy/_version_scm.py"
root = "../.."
local_scheme = "no-local-version"


[tool.cibuildwheel]
# skip 32-bit and pypy builds
skip = ["*-win32", "*-manylinux_i686", "pp*", '*-musllinux*']
# build-frontend = "pip"
before-build = ["git describe --tags --always --dirty"]

# Increase pip debugging output
build-verbosity = 0

test-requires = "pytest"
test-command = "TEST_DATA_DIR='{project}/src/supy/supy/test/data_test' pytest -s '{package}/supy/test'"
# only test on macOS python 3.9
test-skip = "*win* *manylinux* cp31*-*"

[tool.cibuildwheel.linux]
# Install system library
before-build = [
    "yum install -y glibc-static",
    "python3 -m pip install f90wrap",
    "make -C '{package}' clean",
    "make -C '{package}' driver",
    "echo $ARCHFLAGS",
    "file '{package}'/supy/_supy_driver*.so",
]
archs = ["auto64"]

[tool.cibuildwheel.macos]
before-build = [
    'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran',
    "python3 -m pip install f90wrap",
    "make -C '{package}' driver",
    "echo $ARCHFLAGS",
]

# archs = ["universal2"]
# build-verbosity = 10
archs = ["auto"] # skip this for now in gh actions as it takes too long
skip = ['pp*']

repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"


[tool.cibuildwheel.windows]
before-build = [
    "cd {package}",
    "where python",
    "python -m pip install numpy charset_normalizer f90wrap",
    "python -v",
    "python build-win-def.py",
    "make driver",
    # 'python -c "import numpy; print(numpy.__version__)"',
    # "python setup.py build_ext --inplace --compiler=mingw32",
    # "ls -l .",
]
archs = ["auto64"]
